[gd_scene load_steps=5 format=3 uid="uid://bd68otyv1tgcp"]

[ext_resource type="Script" path="res://FunctionDisplayInputHandler.gd" id="1_b1fmi"]
[ext_resource type="Theme" uid="uid://bo8kigawanwjo" path="res://text_theme.tres" id="1_prjq8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6852i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0x0lu"]

[node name="FunctionDisplay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1fmi")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_prjq8")
theme_type_variation = &"HeaderMedium"
text = "two"

[node name="InputParameterHandler" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InputParamTypeDropdown" type="OptionButton" parent="InputParameterHandler"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6852i")

[node name="InputParamInput" type="LineEdit" parent="InputParameterHandler"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AddInputParamButton" type="Button" parent="InputParameterHandler"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_prjq8")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_0x0lu")
text = "Add Input"

[node name="InputParameterContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="OutputParameterHandler" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OutputParamTypeDropdown" type="OptionButton" parent="OutputParameterHandler"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6852i")

[node name="OutputParamInput" type="LineEdit" parent="OutputParameterHandler"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AddOutputParamButton" type="Button" parent="OutputParameterHandler"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_prjq8")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_0x0lu")
text = "Add Output"

[node name="OutputParameterContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
